Kube-ExpenseTracker/expensetracker-api-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expensetracker-api-deployment
  labels:
    app: expensetracker-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: expensetracker-api
  template:
    metadata:
      labels:
        app: expensetracker-api
    spec:
      containers:
        - name: expensetracker-api
          image: kalyankumar21/expensetracker-api:1.0
          ports:
            - containerPort: 3001
