Kube-ExpenseTracker/expensetracker-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expensetracker-api-service
spec:
  type: NodePort
  selector:
    app: expensetracker-api
  ports:
    - port: 8081
      targetPort: 3001
      nodePort: 30008
