Kube-ExpenseTracker/expensetracker-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expensetracker-ui-service
spec:
  type: NodePort
  selector:
    app: expensetracker-ui
  ports:
    - port: 8080
      targetPort: 3000
      nodePort: 30007
