Kube-ExpenseTracker/expenstracker-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expensetracker-ingress
spec:
  rules:
    - host: expense.tracker.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: expensetracker-api-service
                port:
                  number: 8081
